--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
   "dependencies": {
     "@auth/core": "^0.30.0",
     "@clerk/clerk-react": "^4.25.2",
-    "@hookform/resolvers": "^3.3.2",
+    "@hookform/resolvers": "^3.3.4",
     "@radix-ui/react-accordion": "^1.1.2",
     "@radix-ui/react-alert-dialog": "^1.0.5",
     "@radix-ui/react-aspect-ratio": "^1.0.3",
@@ -41,6 +41,7 @@
     "@radix-ui/react-tabs": "^1.0.4",
     "@radix-ui/react-toast": "^1.1.5",
     "@radix-ui/react-toggle": "^1.0.3",
+    "@radix-ui/react-toggle-group": "^1.0.4",
     "@radix-ui/react-tooltip": "^1.0.7",
     "@types/node": "20.6.0",
     "@types/react": "18.2.21",
@@ -49,27 +50,34 @@
     "autoprefixer": "10.4.15",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
-    "cmdk": "^0.2.0",
+    "cmdk": "^0.2.1",
     "convex": "^1.11.2",
     "convex-helpers": "^0.1.35",
     "date-fns": "^2.30.0",
+    "embla-carousel-react": "^8.0.4",
     "eslint": "8.49.0",
     "eslint-config-next": "13.4.19",
+    "input-otp": "^1.2.4",
     "jabber": "^1.5.3",
     "jose": "^5.2.4",
+    "lucide-react": "^0.378.0",
     "next": "^14.2.3",
     "next-auth": "^5.0.0-beta.17",
+    "next-themes": "^0.3.0",
     "postcss": "8.4.29",
     "react": "18.2.0",
-    "react-day-picker": "^8.9.1",
+    "react-day-picker": "^8.10.1",
     "react-dom": "18.2.0",
-    "react-hook-form": "^7.47.0",
+    "react-hook-form": "^7.51.4",
     "react-remove-scroll": "^2.5.6",
+    "react-resizable-panels": "^2.0.19",
+    "sonner": "^1.4.41",
     "tailwind-merge": "^1.14.0",
     "tailwindcss": "3.3.3",
     "tailwindcss-animate": "^1.0.7",
     "typescript": "5.2.2",
-    "zod": "^3.22.4"
+    "vaul": "^0.9.1",
+    "zod": "^3.23.6"
   },
   "devDependencies": {
     "npm-run-all": "^4.1.5"
